# linear-timecode-decoder

./: .gitmodules  README.md
code/: .gitignore  CMakeLists.txt
code/include/: encodedtime.h  timecodes.h  timedecoder.h
code/lib/: timecodes.cpp  timedecoder.cpp
code/src/: main.cpp
code/tests/: CMakeLists.txt
code/tests/unittests/: timedecoder_tests.cpp
